2009-08-17    <piumarta@solaris.piumarta.com>

	* vm/sqUnixCharConv.c: Print a useful error message from
	iconv_open once, then disable further noise.

2009-08-17  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* vm-display-X11/config.cmake: Search X11_INCLUDE_DIR when looking
	for X11/extentions/Xrender.h.

	* vm-display-X11/build.cmake: Search X11_INCLUDE_DIR.

	* plugins/B3DAcceleratorPlugin/build.cmake: Search
	OPENGL_INCLUDE_DIR for headers.

	* plugins/UUIDPlugin/sqUnixUUID.c: Look for both uuid.h and
	uuid/uuid.h.

	* plugins/PseudoTTYPlugin/build.cmake: Add
	unix/plugins/AsynchFilePlugin to include search path.

	* plugins/PseudoTTYPlugin/config.cmake: Check manually for
	/usr/include/libutil.h because FreeBSD cannot #include it alone.

2009-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/config.cmake: Always set OPENGL_* to X11 values; on MacOSX
	set AGL_FOUND, AGL_INCLUDE_DIR and AGL_LIBRARIES to Quartz values.

	* plugins/B3DAcceleratorPlugin/config.cmake: Set USE_X11_GLX, and
	USE_QUARTZ_CGL based on OPENGL_FOUND and AGL_FOUND.

	* vm-display-Quartz/build.cmake: Link against -framework Cocoa.

	* vm-display-X11/build.cmake: Link against X11_LIBS and
	OPENGL_LIBS.

2009-08-16    <piumarta@solaris.piumarta.com>

	* plugins/SocketPlugin/config.cmake: Check for -lsocket and -lnsl.

2009-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/config.cmake: Check for -liconv on Solaris.

	* plugins/SocketPlugin/config.cmake: Check for -lsocket on
	Solaris.

	* CMakeLists.txt: CMake variables can be set via 'configure'.

	* vm/sqUnixExternalPrims.c (tryLoading): ignore directories
	silently but always report the error when dlopen cannot open an
	existing file.

	* vm/sqUnixEvent.c (recordKeyboardEvent): ensure keycode is
	non-negative.

	* vm/sqUnixCharConv.c (setNEncoding): Add setNEncoding function
	on MacOSX to allow XImmPlugin to load without errors.

	* vm/sqUnixMain.c (moduleDescriptions): reorder driver table