@@ -1,4 +1,4 @@
-CHECK_INCLUDE_FILE (vorbis/odec.h	HAVE_VORBIS_CODEC_H)
+CHECK_INCLUDE_FILE (vorbis/codec.h	HAVE_VORBIS_CODEC_H)
 CHECK_INCLUDE_FILE (vorbis/vorbisenc.h	HAVE_VORBIS_VORBISENC_H)
 CHECK_INCLUDE_FILE (speex/speex.h	HAVE_SPEEX_SPEEX_H)
 
