@@ -1,15 +1,16 @@
-IF (NOT PKG_CONFIG_FOUND)
-    PKG_CHECK_MODULES (PANGOCAIRO FREETYPE)
+IF (PKG_CONFIG_FOUND)
+    PKG_CHECK_MODULES (PANGOCAIRO pangocairo)
+    PKG_CHECK_MODULES (FREETYPE freetype2)
     IF (PANGOCAIRO_FOUND AND FREETYPE_FOUND)
-        SET (CMAKE_REQUIRED_FLAGS ${PANGOCAIRO_CFLAGS} ${FREETYPE_CFLAGS})
+        SET (CMAKE_REQUIRED_INCLUDES ${PANGOCAIRO_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS})
         CHECK_INCLUDE_FILE (cairo-ft.h HAVE_CAIRO_FT_H)
     ENDIF ()
 ENDIF ()
 
 IF (HAVE_CAIRO_FT_H)
-    SET (${plugin}_include_dirs "${PANGOCAIRO_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}")
-    SET (${plugin}_library_dirs "${PANGOCAIRO_LIBRARY_DIRS} ${FREETYPE_LIBRARY_DIRS}")
-    SET (${plugin}_libraries    "${PANGOCAIRO_LIBRARIES} ${FREETYPE_LIBRARIES}")
+    SET (${plugin}_include_dirs ${PANGOCAIRO_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS})
+    SET (${plugin}_library_dirs ${PANGOCAIRO_LIBRARY_DIRS} ${FREETYPE_LIBRARY_DIRS})
+    SET (${plugin}_libraries    ${PANGOCAIRO_LIBRARIES} ${FREETYPE_LIBRARIES})
 ELSE ()
     DISABLE_PLUGIN ()
 ENDIF ()
